AdamJacobs/Flask/mysql_db_errors.txt
line 9
    'database': , # we got db as an argument
                ^
SyntaxError: invalid syntax

sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (1045, "Access denied for user 'root'@'localhost' (using password: YES)")

sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (2003, "Can't connect to MySQL server on '127.0.0.1' (61)")

line 40, in MySQLConnector
    return MySQLConnection(app, )
TypeError: __init__() takes exactly 3 arguments (2 given)

